@@ -1,9 +1,14 @@
 PHP Charset Detect Extension Changelog
 
-$Id: Changelog,v 1.1.1.1 2009-02-18 15:02:28 oops Exp $
+$Id: Changelog,v 1.2 2009-02-18 15:45:27 oops Exp $
 
 * 0.0.1
 --------------------------------------------------------------------------------
+
+Thu Feb 20 2009
+by JoungKyun Kim <http://oops.org>
+	- changed Py_Initialize to Py_InitializeEx
+	- fix problem that confidencial set 0 if confidencial is int, on moz_chardet
 
 Wed Feb 19 2009
 by JoungKyun Kim <http://oops.org>
